# electronPythonAppSccaffolding

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.puraviba/: autoimport.yaml  scripts.json
Backend/API/: app.py  logger_config.py  pyproject.toml
Frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
Frontend/src/: App.jsx  index.css  main.jsx
Frontend/src/components/: DataVisualizer.jsx
Frontend/src/lib/: api.js  logger.js
electron/: main.js  preload.js
scripts/: install_dependencies.js  run_pnpm.js
