# Backend/API/pyproject.toml
# Purpose: Defines the Python project metadata and dependencies for the backend API.
# Key Internal Depends On: (none)
# Key Internal Exported To: scripts/install_dependencies.js

[project]
name = "backend-api"
version = "0.1.0"
description = "FastAPI Backend for Electron App"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "plotly>=5.18.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
